--- a/css/main.css
+++ b/css/main.css
@@ -1188,7 +1188,7 @@ button > a {
     font-size: 18px;
   }
   .swiper-backface-hidden .swiper-slide {
-    gap: 53px;
+    gap: 8%;
   }
   .trailer {
     width: 88%;
