--- a/css/main.css
+++ b/css/main.css
@@ -1134,7 +1134,7 @@ button > a {
   .swiper-slide[data-swiper-id="6"] p {
     position: relative;
     z-index: 2;
-    bottom: 30%;
+    bottom: 25vh;
     color: #ddd5c4;
     font-size: 25px;
     background-color: rgba(19, 10, 7, 0.768627451);
@@ -1143,10 +1143,7 @@ button > a {
   .swiper[data-swiper-id="3"] {
     display: none;
   }
-  .swiper[data-swiper-id="6"] {
-    width: 90%;
-    height: 100%;
-  }
+  
   .swiper-slide[data-swiper-id="6"] {
     text-align: center;
     font-size: 18px;
@@ -1302,5 +1299,9 @@ button > a {
   }
   .photos_mini {
     top: 29% !important;
+  }
+
+  .swiper-slide[data-swiper-id="6"] p {
+        bottom: 42vh;
   }
 }
