--- a/css/main.css
+++ b/css/main.css
@@ -1198,9 +1198,9 @@ button > a {
   .trailer {
     width: 88%;
   }
-  .news {
+/*   .news {
     font-size: 18px;
-  }
+  } */
   .photos_mini {
     top: 13% !important;
   }
